	sample rates and periods.
	- ms_genfactmult() now sets the factor and multiplier using the
	SECONDS/SAMPLE notation for sample rates less than 1.0 to retain
	precision for low rates.
	- ms_genfactmult() now assumes the specified rate is a sample
	period in seconds if the samprate value is negative.
	- Add ms_rsqrt64() as a general use reciprocal sqrt for doubles.

2016.277:
	- A more elegant sanity check for output length in packing by mbyt.

2016:276: 2.18rc3
	- Improvements for test suite, more consistency.
	- Remove msr_decode_steim? from libmseed.def, they are internal.
	- Add sanity to length check before memset calls in packing functions.

2016:274: 2.18rc2
	- Check for environment variables ENCODE_DEBUG and DECODE_DEBUG
	and set debugging output, at this point it is Steim frame details
	and differences being encoded/decoded.
	- Fix padding in steim[12] encoding routines.
	- Remove unneeded output buffer checks in steim[12] decoding routines.

2016.272: 2.18rc1
	- Replace data sample packing and unpacking routines from qlib2 with
	new routines developed from scratch.  All code is now LGPL licensed.
	- Add test suite with tests for encoding, decoding, parsing, etc.
	- Update licensing to GNU-LGPL version 3 and include (L)GPL licenses
	in LICENSE.txt.

2015.053:
	- Define needed C99 int types for MSVC 2012 or earlier.  Previously
	this was only done for versions earlier than MSVC 2010.

2015.213: 2.17
	- Round Fixed Section Data Header start time values to the nearest
	tenth of millisecond and restrict the microsecond offset value
	to a range between -50 and +49 as recommended in SEED.  Previously
	start times were truncated at tenths of millisecond resolution
	and the microsecond offset value was between 0 and +99.  This also
	addresses a bug where microsecond offsets were off by 100ms for times
	before Jan 1 1970.  Thanks to Lion Krischer for reporting.

	Note to future hackers: the definition of HPTMODULUS governing the