@@ -7,6 +7,8 @@
 	- ms_genfactmult() now assumes the specified rate is a sample
 	period in seconds if the samprate value is negative.
 	- Add ms_rsqrt64() as a general use reciprocal sqrt for doubles.
+	- Use memcpy() instead of assignment when unpacking float32 and
+	float64 samples to avoid problems with NaN's.  Thanks Lion Krischer.
 
 2016.277:
 	- A more elegant sanity check for output length in packing by mbyt.
